MyProject/force-app/main/default/objects/Product__x/fields/CategoryID__c.field-meta.xml
<CustomField>
    <fullName>CategoryID__c</fullName>
    <description>CategoryID</description>
    <externalDeveloperName>CategoryID</externalDeveloperName>
    <label>CategoryID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>