MyProject/force-app/main/default/objects/Product__x/fields/Discontinued__c.field-meta.xml
<CustomField>
    <fullName>Discontinued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discontinued</description>
    <externalDeveloperName>Discontinued</externalDeveloperName>
    <label>Discontinued</label>
    <type>Checkbox</type>
</CustomField>