MyProject/force-app/main/default/objects/Product__x/fields/ReorderLevel__c.field-meta.xml
<CustomField>
    <fullName>ReorderLevel__c</fullName>
    <description>ReorderLevel</description>
    <externalDeveloperName>ReorderLevel</externalDeveloperName>
    <label>ReorderLevel</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>