MyProject/force-app/main/default/objects/Product__x/fields/SupplierID__c.field-meta.xml
<CustomField>
    <fullName>SupplierID__c</fullName>
    <description>SupplierID</description>
    <externalDeveloperName>SupplierID</externalDeveloperName>
    <label>SupplierID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>