MyProject/force-app/main/default/objects/Product__x/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>UnitPrice</description>
    <externalDeveloperName>UnitPrice</externalDeveloperName>
    <label>UnitPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>