MyProject/force-app/main/default/objects/Product__x/fields/UnitsOnOrder__c.field-meta.xml
<CustomField>
    <fullName>UnitsOnOrder__c</fullName>
    <description>UnitsOnOrder</description>
    <externalDeveloperName>UnitsOnOrder</externalDeveloperName>
    <label>UnitsOnOrder</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>